Fix ModalBackdrop positioning and height for better responsiveness on mobile devices

--- a/src/components/ModalAddTransaction/ModalAddTransaction.module.css
+++ b/src/components/ModalAddTransaction/ModalAddTransaction.module.css
@@ -1,10 +1,10 @@
 @media (max-width: 767px) {
     .ModalBackdrop {
         position: fixed;
-        top: 60px;
+        top: 0px;
         left: 0;
         width: 100%;
-        height: 100%;
+        height: 100vh;
         display: flex;
         justify-content: center;
         /* align-items: center; */
@@ -16,7 +16,7 @@
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
-
+        overflow: auto;
     }
 
     .ModalArea {
@@ -26,6 +26,4 @@
     .ModalCloseBtn {
         display: none;
     }
-
-
 }
